base working version

--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,33 @@
 {
-    "type": "project",
-    "license": "proprietary",
+    "name": "iqom/iqom-translation-provider",
+    "description": "iQom translation provider for Symfony",
+    "type": "symfony-bundle",
+    "autoload": {
+        "psr-4": {
+            "Iqom\\TranslationProviderBundle\\": "src/"
+        }
+    },
+    "authors": [
+        {
+            "name": "Leonid Zakharov",
+            "email": "leo@iqom.ru"
+        }
+    ],
     "minimum-stability": "stable",
+    "license": "proprietary",
     "prefer-stable": true,
     "require": {
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "iqom/iqom-client": "^1.1",
         "symfony/console": "7.1.*",
         "symfony/dotenv": "7.1.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.1.*",
         "symfony/runtime": "7.1.*",
+        "symfony/translation": "7.1.*",
         "symfony/yaml": "7.1.*"
-    },
-    "require-dev": {
     },
     "config": {
         "allow-plugins": {
@@ -24,14 +37,9 @@
         },
         "sort-packages": true
     },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "Iqom\\TranslationProviderBundle\\Tests\\": "tests/"
         }
     },
     "replace": {
@@ -46,8 +54,7 @@
     },
     "scripts": {
         "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "cache:clear": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -64,5 +71,15 @@
             "allow-contrib": false,
             "require": "7.1.*"
         }
+    },
+    "repositories": {
+        "packagist.org": false,
+        "private-packagist": {
+            "type": "composer",
+            "url": "https://repo.packagist.com/iqom/"
+        }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.60"
     }
 }
