--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,7 +13,7 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\:
+    Iqom\TranslationProviderBundle\:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
@@ -22,3 +22,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    Iqom\TranslationProviderBundle\IqomTranslationProviderFactory:
+        tags:
+            - { name: translation.provider_factory }
+
+    translation.iqom_provider_factory:
+        alias: Iqom\TranslationProviderBundle\IqomTranslationProviderFactory
